--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,39 @@ body {
     /*background-image:url('') ;*/
 }
 
+.header {
+    padding: 20px;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 0;
+    line-height: 45px;
+  }
+
+  li{
+      display: inline;
+  }
+
+.header > * {
+    display: inline-block;
+    font-size: 16px;
+    vertical-align: middle;
+    height: 100%;
+    line-height: 45px;
+}
+
+.logo{
+    width: 15%;
+}
+
+.navbar{
+    width: 70%;
+    text-align: center;
+    color: green;
+}
+
+.actions{
+    width: 15%;
+    text-align: center;
+    font-size: 14px;
+}
