--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,178 @@ figure img{
     align-items: center;
     color: #828282;
 }
+/*cartas*/
+
+.features{
+    display: grid;
+    grid-template: repeat(2, 330px) / repeat(2, 1fr);
+    padding: 5% 10%;
+    background-color: #025157;
+}
+
+.feature-card {
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    background-color: #fff;
+    border: 1px solid #dadada;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.feature-content {
+    padding: 30px 20px 40px 40px;
+    flex: 2;
+}
+
+.feature-content > *{
+    margin-bottom: 1rem;
+    margin-top: 0;
+}
+
+.feature-content img{
+    width: 50px;
+}
+
+.feature-content h3{
+    font-family: "Alegreya", serif;
+    font-size: 24px;
+    color: #343434;
+    font-weight: 400;
+}
+
+.feature-content p{
+    font-size: 16px;
+    color: #7e7e7e;
+    font-weight: 400;
+}
+
+.feature-content a{
+    font-size: 16px;
+    color: #67b54b;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.feature-image figure{
+    margin-top: 0;
+    height: 100%;
+    margin: 0 0 5rem;
+}
+
+.feature-image{
+    flex: 1;
+    width: 50%;
+    position: relative;
+    right: -50px;
+    height: 80%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.feature-image img{
+    vertical-align: middle;
+    border-style: none;
+}
+
+/*Como funciona*/
+
+.how-does-it-work {
+    font-family: "Open Sans", sans-serif;
+    padding: 5% 10%;
+    text-align: center;
+    display: block;
+    background-color: #fffbf7;
+    text-align: center;
+   
+}
+  
+.how-does-it-work h2 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 40px;
+    line-height: 48px;
+    text-align: center;
+    color: #025157;
+    
+}
+  
+  
+.how-does-it-work p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 24px;
+    color: black;
+    line-height: 30px;
+}
+  
+.how-does-it-work a {
+    font-size: 15px;
+    color: green;
+    font-weight: 600;
+}
+  
+.how-does-it-work h3 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 40px;
+    line-height: 48px;
+    color: #025157;
+    text-align: center;
+}
+  
+  .how-does-it-work button {
+    font-size: 25px;
+    padding: 15px;
+    border-radius: 8px;
+    font-weight: 150;
+    margin-left: 100px;
+}
+  
+   
+.title {
+    margin-top: 0;
+    
+}
+   
+.card-step-body p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    color: rgb(151, 151, 151);
+    
+}
+
+
+  
+  
+.how-does-it-work .steps  {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 90px;
+}  
+  
+.card-step{
+    margin-right: 20px;
+    margin-left: 20px;
+    border: 3px solid lightgray;
+    border-radius: 5px;
+    padding: 25px;
+}
+  
+  
+.how-does-it-work .steps .card-step .card-step-image {
+    position: relative;
+   
+}
+  
+.card-step-icon {
+    position: absolute;
+    width: 30px;
+    margin-top: 25px;
+    left: 25px;
+}
+  
+.how-does-it-work .steps .card-step .card-step-image .card-step-bg {
+    width: 100%;
+    height: 100%;
+}
