--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 main{
     margin-top: 285px;
     text-align: center;
@@ -54,13 +55,13 @@ li{
     width: 15%;
 }
 
-
+/*
 .navbar{
-    width: 70%;
+    width: 100%;
     text-align: center;
     color: #025157;
 }
-
+*/
 .actions{
     margin-left: 10px;
     margin-right: 10px;
@@ -380,4 +381,78 @@ figure img{
 .how-does-it-work .steps .card-step .card-step-image .card-step-bg {
     width: 100%;
     height: 100%;
+}
+
+
+
+/** dispositivos móviles en vista viewport (vertical) */
+@media (max-width: 575px) {
+    .navbar, .actions{
+        display: none;
+    }
+    /*
+    .header{
+        display: none;
+    }
+    */
+    .Titulo h1{
+        font-size: 60px;
+    }
+
+    .header a img{
+        width: 300%;
+    }
+
+    .banner > img{
+        width: 100%;
+    }
+
+    .publish{
+        display: flex;
+        flex-direction: column;
+        max-width: 70%;
+        
+    }
+
+    .promo{
+        flex-direction: column;
+        max-width: 90%;
+    }
+    .video{
+        width: 100%;
+    }
+
+    .publish{
+        margin-top: 10px;
+    }
+
+    .publish > h3{
+        font-size: 25px;
+    }
+
+    /*Tarjetas*/
+
+    .features{
+        grid-template: repeat(1, 330px) / repeat(1, 1fr);
+    }
+}
+
+/** dispositivos pequeños en vista landscape (horizontal) */
+@media (min-width: 576px) and (max-width: 767px) {
+  
+}
+
+/** dispositivos medianos (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+  
+}
+
+/** dispositivos grandes (desktops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+  
+}
+
+/** dispositivos extra grandes (monitores grandes, tvs) */
+@media (min-width: 1200px) {
+  
 }
